# bixverse

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  404.html  BIXverse.Rproj  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: GSE_hypergeom.R  (+110 more)
src/rust/: Cargo.toml  document.rs  vendor-config.toml
src/rust/src/: fun_coremo.rs  fun_fgsea.rs  fun_helpers.rs  fun_hypergeom.rs  fun_ica.rs  fun_linalg.rs  fun_nmf.rs  fun_ontology.rs  fun_rbh.rs  fun_stats.rs  fun_struct.rs  geom_elim_fun.rs  geom_elim_helpers.rs  helpers_fgsea.rs  helpers_geom_elim.rs  helpers_hypergeom.rs  helpers_ica.rs  helpers_linalg.rs  helpers_ontology.rs  helpers_rbh.rs  helpers_sparse.rs  hypergeom_fun.rs  hypergeom_helpers.rs  lib.rs  macro_assertions.rs  r_rust_utils.rs  stats_fun.rs  stats_utils.rs  utils_r_rust.rs  utils_rust.rs  utils_stats.rs
src/rust/src/base/: mod.rs  r_cors_similarity.rs  r_helpers.rs  r_loess.rs  r_rbf.rs  r_stats.rs  r_svd_pca.rs
src/rust/src/core/: mod.rs
src/rust/src/data/: mod.rs  r_h5.rs  r_sparse.rs  r_synthetic.rs
src/rust/src/enrichment/: mod.rs  r_gsea.rs  r_gsva.rs  r_mitch.rs  r_oea.rs  r_singscore.rs
src/rust/src/graph/: r_graph_clustering.rs  r_knn.rs  r_page_rank.rs  r_snf.rs
src/rust/src/helpers/: fgsea.rs  geom_elim.rs  graph.rs  gsva.rs  hypergeom.rs  ica.rs  linalg.rs  mod.rs  ontology.rs  rbh.rs  sparse_graph_dict.rs  structs_sparse.rs  synthetic_data.rs
src/rust/src/hotfix/: mitch_hotfix.rs  mod.rs
src/rust/src/meta_cell/: mod.rs  r_mc_analysis.rs  r_mc_processing.rs  utils.rs
src/rust/src/methods/: mod.rs  r_cistarget.rs  r_coremo.rs  r_dgrdl.rs  r_diffcor.rs  r_ica.rs  r_rbh.rs
src/rust/src/ontology/: r_go_elim.rs  r_similiarity.rs
src/rust/src/r_bindings/: mod.rs
src/rust/src/r_function/: mod.rs  r_coremo.rs  r_fgsea.rs  r_graphs.rs  r_gsva.rs  r_helpers.rs  r_hypergeom.rs  r_ica.rs  r_linalg.rs  r_ontology.rs  r_rbh.rs  r_single_cell_obj.rs  r_sparse_graph_dict.rs  r_sparse_struct.rs  r_stats.rs  r_synthetic_data.rs
src/rust/src/single_cell/: batch_corrections.rs  bbknn.rs  cell_aggregations.rs  dge.rs  dge_aucs.rs  dge_pathway_scores.rs  doublet_detection.rs  fast_mnn.rs  fast_ranking.rs  fastmnn.rs  mod.rs  processing.rs  r_class_extractors.rs  r_count_obj.rs  r_sc_adt.rs  r_sc_analysis.rs  r_sc_annotation.rs  r_sc_batch_corr.rs  r_sc_data.rs  r_sc_metacells.rs  r_sc_multimodal.rs  r_sc_plot_extraction.rs  r_sc_processing.rs  sc_knn_snn.rs  scrublet.rs  seacell.rs  seacells.rs  utils.rs  vec_based_sim.rs
src/rust/src/utils/: general.rs  macros.rs  mod.rs  r_rust_interface.rs  traits.rs  utils_stats.rs
(+2796 files in other folders)
