[package]
version = '0.3.0'
name = 'bixverse'
publish = false
edition = '2021'
rust-version = '1.88'

[lib]
crate-type = ['staticlib']
name = 'bixverse'

[features]
default = []

[profile.dev.package.faer]
opt-level = 3

[profile.test]
opt-level = 3
debug = false

[dependencies]
arpack-ng = { version = "0.2.2", default-features = false, features = [
    "ndarray",
] }
bincode = { version = "2.0.1", features = ["serde"] }
anyhow = "1.0.99"
extendr-api = "0.8.1"
faer = { version = '0.23.2' }
faer-entity = "0.20.1"
half = { version = "2.7.1", features = ["serde"] }
hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [
    "static",
    "zlib",
] }
indexmap = "2.12.0"
instant-distance = "0.6.1"
memmap2 = "0.9"
ndarray = "0.17.1"
num-complex = '0.4.6'
num-traits = "0.2"
once_cell = "1.21.3"
petgraph = { version = "0.8.3", features = ["rayon"] }
rand = { version = "0.9.0", features = ["std"] }
rand_distr = "0.5.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
statrs = '*'
thousands = "*"
