[package]
version = '0.3.0'
name = 'bixverse'
publish = false
edition = '2021'
rust-version = '1.88'

[lib]
crate-type = ['staticlib']
name = 'bixverse'

[features]
default = []

[profile.dev.package.faer]
opt-level = 3

[profile.test]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
extendr-api = "0.8.1"
faer = { version = '0.23.2' }
half = { version = "2.7.1", features = ["serde"] }
petgraph = { version = "0.8.3", features = ["rayon"] }
rand = { version = "0.9.0", features = ["std"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
thousands = "*"
bixverse-rs = { git = "https://github.com/GregorLueg/bixverse-rs", branch = "feat-only-norm-data", features = [
    "single-cell",
] }
