[package]
version = '0.3.3'
name = 'bixverse'
publish = false
edition = '2021'
rust-version = '1.88'

[lib]
crate-type = ['staticlib', 'rlib']
name = 'bixverse'

[features]
default = []

[profile.dev.package.faer]
opt-level = 3

[profile.test]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true

[dependencies]
extendr-api = "0.9.0"
faer = { version = '0.23.2' }
half = { version = "2.7.1", features = ["serde"] }
petgraph = { version = "0.8.3", features = ["rayon"] }
rand = { version = "0.9.0", features = ["std"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
thousands = "0.2.0"
statrs = "0.18.0"
bixverse-rs = { version = "0.2.0" , features = ["single-cell",] }
either = "1.15.0"

[[bin]]
name = "document"
path = "document.rs"
